--- a/Tutorials/MyFirstGame/Tutorial_HTML.html
+++ b/Tutorials/MyFirstGame/Tutorial_HTML.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tutorial Game</title>
-    <script type="text/javascript" src="phaser.min.js"></script> <!-- We have to import our JS files (the game itself and eht phaser.min file) -->
+    <script type="text/javascript" src="phaser.min.js"></script> <!-- We have to import our JS files (the game itself and the phaser.min file) -->
     <script type="text/javascript" src="Tutorial_JS.js"></script>
 </head>
 <body>
