--- a/Game/FirstSketch_main.html
+++ b/Game/FirstSketch_main.html
@@ -5,8 +5,21 @@
     <title>Title</title>
     <script type="text/javascript" src="phaser.min.js"></script> <!-- We have to import our JS files (the game itself and the phaser.min file) -->
     <script type="text/javascript" src="FirstSketch_main.js"></script>
+
+    <style>
+        #mainCanvas{
+            position: fixed;
+            top: 10px;
+            bottom: 10px;
+            left: 10px;
+            right: 10px;
+            margin: auto;
+            align-self:center;
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
-
+    <div id="mainCanvas"></div>
 </body>
 </html>
