Browser Background Image

--- a/Game/FirstSketch_main.html
+++ b/Game/FirstSketch_main.html
@@ -9,14 +9,15 @@
     <style>
         #mainCanvas{
             position: fixed;
-            top: 10px;
-            bottom: 10px;
-            left: 10px;
-            right: 10px;
+            top: 0px;
+            bottom: 0px;
+            left: 0px;
+            right: 0px;
             margin: auto;
             align-self:center;
-            background-color: white;
+            background-image: url("Assets/Sprites/BackgroundBrowserTry.png");
         }
+
     </style>
 </head>
 <body>
