--- a/Game/Scripts/FirstSketch_main.html
+++ b/Game/Scripts/FirstSketch_main.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="text/javascript" src="phaser.min.js"></script> <!-- We have to import our JS files (the game itself and the phaser.min file) -->
+    <script type="text/javascript" src="Utilities/phaser.min.js"></script> <!-- We have to import our JS files (the game itself and the phaser.min file) -->
+    <script type="text/javascript" src="Utilities/align.js"></script>
+    <script type="text/javascript" src="Utilities/alignGrid.js"></script>
+    <script type="text/javascript" src="Utilities/UIBlock.js"></script>
     <script type="text/javascript" src="FirstSketch_main.js"></script>
 
     <style>
@@ -15,7 +18,7 @@
             right: 0px;
             margin: auto;
             align-self:center;
-            background-image: url("Assets/Sprites/BackgroundBrowserTry.png");
+            background-image: url("../Assets/Sprites/BackgroundBrowserTry.png");
         }
 
     </style>
