--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -8,8 +8,8 @@
     <script type="text/javascript" src="lib/alignGrid.js"></script>
     <script type="text/javascript" src="lib/UIBlock.js"></script>
     <!--<script type="text/javascript" src="FirstSketch_main.js"></script>-->
-    <script type="text/javascript" src="Scene1.js"></script>
-    <script type="text/javascript" src="Scene2.js"></script>
+    <script type="text/javascript" src="Scene_Preload.js"></script>
+    <script type="text/javascript" src="Scene_Level_01.js"></script>
     <script type="text/javascript" src="main.js"></script>
 
     <style>
