Pixeled issue solved
The issue was caused due to the pixelArt option being enabled.

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -8,8 +8,11 @@
     <script type="text/javascript" src="lib/alignGrid.js"></script>
     <script type="text/javascript" src="lib/UIBlock.js"></script>
     <!--<script type="text/javascript" src="FirstSketch_main.js"></script>-->
-    <script type="text/javascript" src="Scene_Preload.js"></script>
-    <script type="text/javascript" src="Scene_Level_01.js"></script>
+
+    <script type="text/javascript" src="Scenes/Scene_Dummy.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_Preload.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_Level_01.js"></script>
+
     <script type="text/javascript" src="main.js"></script>
 
     <style>
@@ -23,7 +26,6 @@
             align-self:center;
             background-image: url("../assets/Sprites/BackgroundBrowserTry.png");
         }
-
     </style>
 </head>
 <body>
