--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">ñbr
     <title>Title</title>
     <script type="text/javascript" src="lib/phaser.js"></script> <!-- We have to import our JS files (the game itself and the phaser.min file) -->
     <script type="text/javascript" src="lib/align.js"></script>
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="Scenes/Scene_Dummy.js"></script>
     <script type="text/javascript" src="Scenes/Scene_Preload.js"></script>
     <script type="text/javascript" src="Scenes/Scene_Level_01.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_InGameHUD.js"></script>
 
     <script type="text/javascript" src="main.js"></script>
 
