World size system improved. Fist map implemented
- The way we set the world size and its bouds (and the camera´s) has been improved.
- First map is now in the game, with all its colissions.

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">ñbr
     <title>Title</title>
+    <!-- <script type="text/javascript" src="lib/matter.js" ></script>  matter physics file -->
     <script type="text/javascript" src="lib/phaser.js"></script> <!-- We have to import our JS files (the game itself and the phaser.min file) -->
     <script type="text/javascript" src="lib/align.js"></script>
     <script type="text/javascript" src="lib/alignGrid.js"></script>
     <script type="text/javascript" src="lib/UIBlock.js"></script>
-    <!--<script type="text/javascript" src="FirstSketch_main.js"></script>-->
 
     <script type="text/javascript" src="Scenes/Scene_Dummy.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_LeftPanel.js"></script>
     <script type="text/javascript" src="Scenes/Scene_Preload.js"></script>
     <script type="text/javascript" src="Scenes/Scene_Level_01.js"></script>
     <script type="text/javascript" src="Scenes/Scene_InGameHUD.js"></script>
-
     <script type="text/javascript" src="main.js"></script>
 
     <style>
@@ -27,6 +27,7 @@
             align-self:center;
             background-image: url("../assets/Sprites/BackgroundBrowserTry.png");
         }
+
     </style>
 </head>
 <body>
