--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -23,10 +23,10 @@
     <style>
         #mainCanvas{
             position: fixed;
-            top: 0px;
-            bottom: 0px;
-            left: 0px;
-            right: 0px;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
             margin: auto;
             align-self:center;
             background-image: url("../assets/Sprites/BackgroundBrowserTry.png");
