--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="lib/alignGrid.js"></script>
     <script type="text/javascript" src="lib/UIBlock.js"></script>
 
+    <script type="text/javascript" src="Classes/WinLine.js"></script>
     <script type="text/javascript" src="Classes/MovementBar.js"></script>
     <script type="text/javascript" src="Classes/Controls.js"></script>
     <script type="text/javascript" src="Classes/Player.js"></script>
