Power up class and shield power up

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="Classes/MovementBar.js"></script>
     <script type="text/javascript" src="Classes/Controls.js"></script>
     <script type="text/javascript" src="Classes/Player.js"></script>
+    <script type="text/javascript" src="Classes/PowerUp.js"></script>
 
     <script type="text/javascript" src="Scenes/Scene_Dummy.js"></script>
     <script type="text/javascript" src="Scenes/Scene_LeftPanel.js"></script>
