--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -9,10 +9,14 @@
     <script type="text/javascript" src="lib/alignGrid.js"></script>
     <script type="text/javascript" src="lib/UIBlock.js"></script>
 
+    <script type="text/javascript" src="Classes/PowerUps/PowerUp.js"></script>
+    <script type="text/javascript" src="Classes/PowerUps/PowerUp_Dash.js"></script>
+    <script type="text/javascript" src="Classes/PowerUps/PowerUp_Shield.js"></script>
+    <script type="text/javascript" src="Classes/PowerUps/PowerUp_Box.js"></script>
+
     <script type="text/javascript" src="Classes/MovementBar.js"></script>
     <script type="text/javascript" src="Classes/Controls.js"></script>
     <script type="text/javascript" src="Classes/Player.js"></script>
-    <script type="text/javascript" src="Classes/PowerUp.js"></script>
 
     <script type="text/javascript" src="Scenes/Scene_Dummy.js"></script>
     <script type="text/javascript" src="Scenes/Scene_LeftPanel.js"></script>
