Browser background minor changes

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -32,7 +32,10 @@
             right: 0;
             margin: auto;
             align-self:center;
-            background-image: url("../assets/Sprites/Browser/BackgroundBrowserTry.png");
+            background-image: url("../assets/Sprites/Browser/browserBackground.png");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
     </style>
