Gen_Level system and scene renaming

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="lib/alignGrid.js"></script>
     <script type="text/javascript" src="lib/UIBlock.js"></script>
 
-    <script type="text/javascript" src="Classes/PowerUps/PowerUp.js"></script>
+    <script type="text/javascript" src="Classes/PowerUps/Gen_PowerUp.js"></script>
     <script type="text/javascript" src="Classes/PowerUps/PowerUp_Dash.js"></script>
     <script type="text/javascript" src="Classes/PowerUps/PowerUp_Shield.js"></script>
     <script type="text/javascript" src="Classes/PowerUps/PowerUp_Box.js"></script>
@@ -18,11 +18,19 @@
     <script type="text/javascript" src="Classes/Controls.js"></script>
     <script type="text/javascript" src="Classes/Player.js"></script>
 
-    <script type="text/javascript" src="Scenes/Scene_Dummy.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_LeftPanel.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_Preload.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_Level_01.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_InGameHUD.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_00_Dummy.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_01_Preload.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02.0_MainMenu.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02.1_HowToPlay.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02.2_Tutorial.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02.3_Credits.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02.4_Shop.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_03.0_Lobby.js"></script>
+    <script type="text/javascript" src="Scenes/Gen_Level.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04.0_InGameHUD.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04.1_Level_01.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04.2_Level_02.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_05.0_Ranking.js"></script>
     <script type="text/javascript" src="main.js"></script>
 
     <style>
@@ -36,7 +44,6 @@
             align-self:center;
             background-image: url("../assets/Sprites/BackgroundBrowserTry.png");
         }
-
     </style>
 </head>
 <body>
