--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -20,17 +20,17 @@
 
     <script type="text/javascript" src="Scenes/Scene_00_Dummy.js"></script>
     <script type="text/javascript" src="Scenes/Scene_01_Preload.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_02.0_MainMenu.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_02.1_HowToPlay.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_02.2_Tutorial.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_02.3_Credits.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_02.4_Shop.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_03.0_Lobby.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02_0_MainMenu.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02_1_HowToPlay.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02_2_Tutorial.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02_3_Credits.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02_4_Shop.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_03_0_Lobby.js"></script>
     <script type="text/javascript" src="Scenes/Gen_Level.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_04.0_InGameHUD.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_04.1_Level_01.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_04.2_Level_02.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_05.0_Ranking.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04_0_InGameHUD.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04_1_Level_01.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04_2_Level_02.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_05_0_Ranking.js"></script>
     <script type="text/javascript" src="main.js"></script>
 
     <style>
