renaming to match master branch

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -27,8 +27,8 @@
     <script type="text/javascript" src="Scenes/Scene_02_4_Shop.js"></script>
     <script type="text/javascript" src="Scenes/Scene_03_0_Lobby.js"></script>
     <script type="text/javascript" src="Scenes/Gen_Level.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_04_0_InGameHUD.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_04_1_Level_01.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_InGameHUD.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_Level_01.js"></script>
     <script type="text/javascript" src="Scenes/Scene_04_2_Level_02.js"></script>
     <script type="text/javascript" src="Scenes/Scene_05_0_Ranking.js"></script>
     <script type="text/javascript" src="main.js"></script>
