--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="Classes/Player.js"></script>
 
     <script type="text/javascript" src="Scenes/Scene_00_Dummy.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_01_Preload.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_Preload.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_0_MainMenu.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_1_HowToPlay.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_2_Tutorial.js"></script>
