Renaming to match master branch

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="Classes/Controls.js"></script>
     <script type="text/javascript" src="Classes/Player.js"></script>
 
-    <script type="text/javascript" src="Scenes/Scene_00_Dummy.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_Dummy.js"></script>
     <script type="text/javascript" src="Scenes/Scene_Preload.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_0_MainMenu.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_1_HowToPlay.js"></script>
