Scene renaming (again)

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -17,8 +17,8 @@
     <script type="text/javascript" src="Classes/Controls.js"></script>
     <script type="text/javascript" src="Classes/Player.js"></script>
 
-    <script type="text/javascript" src="Scenes/Scene_Dummy.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_Preload.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_00_Dummy.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_01_Preload.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_0_MainMenu.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_1_HowToPlay.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_2_Tutorial.js"></script>
@@ -26,8 +26,8 @@
     <script type="text/javascript" src="Scenes/Scene_02_4_Shop.js"></script>
     <script type="text/javascript" src="Scenes/Scene_03_0_Lobby.js"></script>
     <script type="text/javascript" src="Scenes/Gen_Level.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_InGameHUD.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_Level_01.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04_0_InGameHUD.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04_1_Level_01.js"></script>
     <script type="text/javascript" src="Scenes/Scene_04_2_Level_02.js"></script>
     <script type="text/javascript" src="Scenes/Scene_05_0_Ranking.js"></script>
     <script type="text/javascript" src="main.js"></script>
