--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="Classes/PowerUps/PowerUp_Box.js"></script>
 
     <script type="text/javascript" src="Classes/MovementBar.js"></script>
-    <script type="text/javascript" src="Classes/Controls.js"></script>
+    <script type="text/javascript" src="Classes/Controls/Controls_InGame.js"></script>
     <script type="text/javascript" src="Classes/Player.js"></script>
 
     <script type="text/javascript" src="Scenes/Scene_00_Dummy.js"></script>
