--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="lib/alignGrid.js"></script>
     <script type="text/javascript" src="lib/UIBlock.js"></script>
 
+    <script type="text/javascript" src="Classes/Enemies/Saw.js"></script>
+
     <script type="text/javascript" src="Classes/PowerUps/Gen_PowerUp.js"></script>
     <script type="text/javascript" src="Classes/PowerUps/PowerUp_Dash.js"></script>
     <script type="text/javascript" src="Classes/PowerUps/PowerUp_Shield.js"></script>
