--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -21,7 +21,7 @@
 
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="Scenes/Gen_Level.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_00_Dummy.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_00_Charge.js"></script>
     <script type="text/javascript" src="Scenes/Scene_01_Preload.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_0_MainMenu.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_1_HowToPlay.js"></script>
