All levels playable (saws remaining)
- Only saws are left to be placed properly. All levels are playable and work perfectly.

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="Scenes/Scene_04_0_InGameHUD.js"></script>
     <script type="text/javascript" src="Scenes/Scene_04_1_Level_01.js"></script>
     <script type="text/javascript" src="Scenes/Scene_04_2_Level_02.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_04_3_Level_03.js"></script>
     <script type="text/javascript" src="Scenes/Scene_05_0_Ranking.js"></script>
 
     <style>
