--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="Classes/MovementBar.js"></script>
     <script type="text/javascript" src="Classes/Controls/Controls_InGame.js"></script>
     <script type="text/javascript" src="Classes/Player.js"></script>
+    <script type="text/javascript" src="Classes/CheerPenguin.js"></script>
 
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="Scenes/Gen_Level.js"></script>
