--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="Scenes/Scene_02_3_Credits.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_4_Shop.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_5_ChooseMode.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_02_6_Settings.js"></script>
     <script type="text/javascript" src="Scenes/Scene_03_0_Lobby.js"></script>
     <script type="text/javascript" src="Scenes/Scene_04_0_InGameHUD.js"></script>
     <script type="text/javascript" src="Scenes/Scene_04_1_Level_01.js"></script>
