Music developped / Sfx base

--- a/Game/src/FirstSketch_main.html
+++ b/Game/src/FirstSketch_main.html
@@ -15,15 +15,16 @@
     <script type="text/javascript" src="Classes/PowerUps/PowerUp_Shield.js"></script>
     <script type="text/javascript" src="Classes/PowerUps/PowerUp_Box.js"></script>
 
-    <script type="text/javascript" src="Classes/MovementBar.js"></script>
-    <script type="text/javascript" src="Classes/Controls/Controls_InGame.js"></script>
-    <script type="text/javascript" src="Classes/Player.js"></script>
-    <script type="text/javascript" src="Classes/CheerPenguin.js"></script>
+    <script type="text/javascript" src="Classes/Player/MovementBar.js"></script>
+    <script type="text/javascript" src="Classes/Player/Controls_InGame.js"></script>
+    <script type="text/javascript" src="Classes/Player/Player.js"></script>
+    <script type="text/javascript" src="Classes/Npcs/CheerPenguin.js"></script>
 
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="Scenes/Gen_Level.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_00_Charge.js"></script>
-    <script type="text/javascript" src="Scenes/Scene_01_Preload.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_00_0_Charge.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_01_0_Preload.js"></script>
+    <script type="text/javascript" src="Scenes/Scene_01_1_MusicManager.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_0_MainMenu.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_1_HowToPlay.js"></script>
     <script type="text/javascript" src="Scenes/Scene_02_2_Tutorial.js"></script>
